docs(#244): split install vs draft triggers in sf-srs skill (#259)
Disambiguate the `--from codebase` trigger table so AI agents don't
route "bootstrap the SRS" to drafting when the user actually means
install the module. The table now opens with an explicit manifest
check (tools.srs must exist) and points install requests to
`sf update --add-modules srs` instead. Renamed the first row from
"bootstrap an SRS" to "initialise SRS content" to keep the two
flows verbally distinct. Mirrored to the scaffold template.

Co-authored-by: Claude Opus 4.7 <noreply@anthropic.com>